--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Elessar GameLibrary</title>
+
+    <style>
+      .footer{
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 1);
+    color: red;
+    padding: 1em 2em;
+    }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,5 +49,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer class="footer">
+    <h3>G-Mail : erden0652@gmail.com</h3>
+    <h5>I am using mmobomb and freetogame APIs</h5>
+  </footer>
   
 </html>
