--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     -->
   </body>
   <footer class="footer">
-    <h3>G-Mail : erden0652@gmail.com</h3>
+    <h3>Gmail : erden0652@gmail.com</h3>
     <h5>I am using mmobomb and freetogame APIs</h5>
   </footer>
   
